Adding BottomSheetDialogFragment example to Button 3

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,6 @@
         Landjaeger shoulder short ribs bacon pork loin doner prosciutto turkey pork. Andouille ground round flank biltong. Flank tail drumstick, fatback jerky brisket pig landjaeger pork belly cow hamburger. Picanha bresaola beef, sausage alcatra tri-tip filet mignon chicken leberkas andouille biltong.
     </string>
 
+    <string name="fragment_title">Bottom Sheet Fragment Title</string>
+
 </resources>
